--- a/src/main/webapp/smartcart.html
+++ b/src/main/webapp/smartcart.html
@@ -82,15 +82,14 @@
 
 
         var smartItems = [
-            {"id":1,"name":"Banana", "price":500, imgSrc:"bananas.jpg"},
-            {"id":2,"name":"Apple", "price":500, imgSrc:"Apple.jpg"},
-            {"id":3,"name":"Orange", "price":500, imgSrc:"orange.jpg"},
-            {"id":4,"name":"Orange", "price":500, imgSrc:"orange.jpg"}
+            {"id":1,"name":"Banana", "price":7, imgSrc:"bananas.jpg"},
+            {"id":2,"name":"Apple", "price":15, imgSrc:"Apple.jpg"},
+            {"id":3,"name":"Orange", "price":25, imgSrc:"orange.jpg"},
         ];
         var cartItems = [
-            {"id":1,"name":"Pomegranate", "price":500, "quantity":1, imgSrc:"pomegranate.jpeg"},
-            {"id":2,"name":"Water Melon", "price":500, "quantity":1, imgSrc:"watermelon.jpeg"},
-            {"id":3,"name":"Papaya", "quantity":1, "price":500, imgSrc:"papaya.jpg"}
+            {"id":1,"name":"Pomegranate", "price":75, "quantity":1, imgSrc:"pomegranate.jpeg"},
+            {"id":2,"name":"Water Melon", "price":50, "quantity":1, imgSrc:"watermelon.jpeg"},
+            {"id":3,"name":"Papaya", "price":16 ,"quantity":1, imgSrc:"papaya.jpg"}
         ];
 
         var imagesDir = "./images/";
