--- a/src/main/webapp/smartcart.html
+++ b/src/main/webapp/smartcart.html
@@ -108,9 +108,9 @@
         function addToCart(item){
             var itemToAdd = smartItems.filter(function(i) {return i.id === parseInt(item.dataset.smartItemId)})[0];
             cartItems.push(itemToAdd);
+            document.getElementsByClassName("smart-cart-container")[0].getElementsByClassName("row").namedItem(itemToAdd.id).remove();
             itemToAdd.quantity = 1;
             new CartItem(itemToAdd).add();
-
         }
 
 </script>
